--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,11 @@
             <version>20220320</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 </project>
