--- a/src/main/resources/app-config.yml
+++ b/src/main/resources/app-config.yml
@@ -4,6 +4,7 @@ globalAccount : AccountName_xxxxxx-xxxxxx-xxxxxx-xxxxxx-xxxxxx
 apiAccessKey : xxxxxx-xxxxxx-xxxxxx-xxxxxx-xxxxxx
 
 #for complex queries, use HTTP mode to communicate with Machine Agent
+#disabled in this release - please dont remove config parameters
 httpMode: false
 machineAgentIpAddress : 0.0.0.0
 machineAgentPort: 8787
